Setup docker compose watch(hot reload)

--- a/pkg/templates/login.templ
+++ b/pkg/templates/login.templ
@@ -1,6 +1,37 @@
 package view
 
 templ Login() {
-	<div>Hello</div>
-	<button class="border-solid border-2" type="button" hx-post="/v1/users">Login with passkey</button>
+	<div class="box-content w-80 place-self-center flex min-h-full flex-col justify-center px-6 py-12 lg:px-8 shadow-sm">
+		<h1>Sign in or sign up</h1>
+		<form>
+			<div>
+				<label for="email">Email address</label>
+				<div class="mt-2">
+					<input required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" type="email" name="name" id="email" autocomplete="email webauthn"/>
+				</div>
+			</div>
+			<div>
+				<label for="username">Username</label>
+				<div class="mt-2">
+					<input required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" type="text" name="display_name" id="username" autocomplete="given-name webauthn"/>
+				</div>
+			</div>
+			// <script type="text/javascript">
+			// 	(async () => {
+			// 		if (window.PublicKeyCredential && PublicKeyCredential.isConditionalMediationAvailable) {
+			// 			const isCMA = await PublicKeyCredential.isConditionalMediationAvailable()
+			// 			if (isCMA) {
+			// 				console.log("webauth available!")
+			// 			}
+			// 		}
+			// 	})()
+			// </script>
+			<button class="bg-yellow-300 w-full mt-8 rounded-full shadow-md" type="submit" hx-post="/v1/sessions">
+				<div class="flex flex-row p-2 justify-center">
+					<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-160v-112q0-34 17.5-62.5T184-378q62-31 126-46.5T440-440q20 0 40 1.5t40 4.5q-4 58 21 109.5t73 84.5v80H120ZM760-40l-60-60v-186q-44-13-72-49.5T600-420q0-58 41-99t99-41q58 0 99 41t41 99q0 45-25.5 80T790-290l50 50-60 60 60 60-80 80ZM440-480q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47Zm300 80q17 0 28.5-11.5T780-440q0-17-11.5-28.5T740-480q-17 0-28.5 11.5T700-440q0 17 11.5 28.5T740-400Z"></path></svg>
+					<p>Login with passkey</p>
+				</div>
+			</button>
+		</form>
+	</div>
 }
